[project]
name = "codif-ape-API"
version = "0.1.0"
description = "Code for the deployment of the classification model for the APE nomenclature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fasttext>=0.9.3",
    "mlflow>=2.21.2",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "unidecode>=1.3.8",
    "uvicorn>=0.34.0",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 130

[tool.uv]
default-groups = ["dev"]
