[project]
name = "codif-ape-API"
version = "0.1.0"
description = "API for deployment of the classification model for APE nomenclature"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "mlflow>=3.14.0",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pendulum>=3.2.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "s3fs>=2026.4.0",
    "torch>=2.12.1",
    "torchtextclassifiers[huggingface]>=0.0.0.dev0",
    "tqdm>=4.68.3",
    "unidecode>=1.4.0",
    "uvicorn>=0.34.0",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"},
  {name="Meilame Tayebjee", email="meilame.tayebjee@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 100

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torchtextclassifiers = { git = "https://github.com/InseeFrLab/torchTextClassifiers.git" }
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
